2007-07-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h: Provide pread() and pwrite() prototypes if they
	are missing.
	* configure.ac: Check for missing pread() and pwrite() prototypes.
	* m4/ac_func_fseeko.m4: Use fixed version of AC_FUNC_FSEEKO.
	* magick/utility.c (SystemCommand): Avoid use of snprintf.

2007-07-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c: Only replace getc_unlocked() and putc__unlocked()
	for a thread-safe build.
	* magick/studio.h: Always use fseeko() and ftello() if they are
	available.

2007-07-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Avoid using seek() if possible, and
	don't use at all if the input is not seekable.
	* coders/psd.c (ReadPSDImage): Eliminate memory leak when reading
	PSD files.  Fixes Sourceforge issue 1625477 "Memory leak reading
	layered PSD Image".

2007-06-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: Fixed -affine command argument
	validation. Fixes SourceForge issue 1743141 "Affine matrix option
	parsing".
	* config/magic.mgk: Added detection for BigTIFF.
	* coders/tiff.c: Preliminary work to support BigTIFF.

2007-06-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c: Fix problems encountered when reading and writing
	from/to pipes or compressed files.

2007-06-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Improved the pixel data marshalling
	in order to obtain better read performance for 10-bit DPX.
	* magick/blob.c (OpenBlob): Added support for MAGICK_MMAP_READ and
	MAGICK_MMAP_WRITE environment variable options to enable input and
	output file access using mmap().

2007-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (OpenBlob): Use MAGICK_IOBUF_SIZE to tune the size
	of the I/O buffer.  Sometimes performance is improved by using
	something other than the current default of 16KB.
