@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2007-07-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/pnm.c (ReadPNMImage):  Fix pixel scaling problem caused by
+        floating point rounding error.
+
+</UL>
+<p>
 2007-07-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
